rainbowdressup.net (archived on 2017-06-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "entertainment;games",
  "char_count": 4449,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.96,
  "homepage_snapshot_redirected_domain": "rainbowdressup.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170626122112id_/http://www.rainbowdressup.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170627072245id_/http%3A//rainbowdressup.net",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "rainbowdressup.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606003148id_/http%3A//www.rainbowdressup.com/privacy-policy",
  "policy_title": "Privacy Policy | RainbowDressup.com",
  "policy_url": "rainbowdressup.com/privacy-policy",
  "sha1": "54d8b24356b10adfd7ee39a75f62ba454d7071f6",
  "simhash": 17284581286433251291,
  "simhash_updated": false,
  "site_hostname": "rainbowdressup.net",
  "site_url": "http://rainbowdressup.net",
  "smog": 13.56,
  "strict_updated": false,
  "timestamp": "20170606003148",
  "word_count": 747,
  "year": 2017
}

--- a/r/ra/rai/rainbowdressup.net.html
+++ b/r/ra/rai/rainbowdressup.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rainbowdressup.net privacy policy that was archived on 2016-05-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160508135042id_/http%3A//www.rainbowdressup.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rainbowdressup.net privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606003148id_/http%3A//www.rainbowdressup.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <base href="http://www.rainbowdressup.com/">
@@ -20,69 +20,18 @@
 <meta name="description" content="Please read our privacy policy. By using Cartitans.com you agree to our privacy policy.">
 <meta name="keywords" content="sport games arena, privacy policy">
  
-<link href="http://www.rainbowdressup.com/css/normalize.css?ver=1.862" rel="stylesheet" type="text/css" media="screen">
-<link href="http://www.rainbowdressup.com/css/style.css?ver=1.862" rel="stylesheet" type="text/css" media="screen">
-<link href="http://www.rainbowdressup.com/css/responsive.css?ver=1.862" rel="stylesheet" type="text/css" media="screen">
+<link href="http://www.rainbowdressup.com/css/normalize.css?ver=1.869" rel="stylesheet" type="text/css" media="screen">
+<link href="http://www.rainbowdressup.com/css/style.css?ver=1.869" rel="stylesheet" type="text/css" media="screen">
+<link href="http://www.rainbowdressup.com/css/responsive.css?ver=1.869" rel="stylesheet" type="text/css" media="screen">
  
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_GB/sdk.js#xfbml=1&amp;appId=730576730339294&amp;version=v2.0"></script><script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-<script src="http://www.rainbowdressup.com/js/jquery.lazyload.min.js?ver=1.862"></script>
-<script src="http://www.rainbowdressup.com/js/script.js?ver=1.862"></script>
+<script src="//server.cpmstar.com/cached/js/popunder_v101.pack.js" type="text/javascript"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_GB/sdk.js#xfbml=1&amp;appId=730576730339294&amp;version=v2.0"></script><script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="http://www.rainbowdressup.com/js/jquery.lazyload.min.js?ver=1.869"></script>
+<script src="http://www.rainbowdressup.com/js/script.js?ver=1.869"></script>
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <script src="js/IE_FIX_selectivizr.min.js"></script>
 <![endif]-->
- 
-<script type="text/javascript">
-        (function() {
-            var useSSL = 'https:' == document.location.protocol;
-            var src = (useSSL ? 'https:' : 'http:') +
-                    '//www.googletagservices.com/tag/js/gpt.js';
-            document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
-        })();
-    </script><script src="https://www.googletagservices.com/tag/js/gpt.js"></script>
-<script type="text/javascript">
-        function viewport(){
-            var e = window;
-            var a = 'inner';
-            if (!('innerWidth' in window)){
-                a = 'client';
-                e = document.documentElement || document.body;
-            }
-            return { width : e[ a+'Width' ] , height : e[ a+'Height' ] }
-        }
-
-        function sz()  {
-            var ads = ["none", "normal", "wide"];
-            var res = [0, 980, 1280];
-            var found = ads[0];
-            for(var i=1; i<ads.length; i++) {
-                var windowSz = viewport();
-
-                if(windowSz.width >= res[i]) {
-                    found = ads[i];
-                }
-            }
-            return found;
-        }
-
-
-
-    </script>
-<script type="text/javascript">
-        googletag.cmd.push(function() {
-            googletag.defineSlot('/25409434/Rainbowdressup.com-Right', [[160, 600], [300, 600]], 'div-gpt-ad-1453110288470-1').addService(googletag.pubads());
-            googletag.defineSlot('/25409434/Rainbowdressup.com-BTF', [[728, 90], [970, 90]], 'div-gpt-ad-1453110288470-0').addService(googletag.pubads());
-            googletag.pubads().set("page_url", window.location.href);
-            googletag.pubads().setTargeting("BSZ",sz());
-            googletag.pubads().enableVideoAds();
-            googletag.companionAds().setRefreshUnfilledSlots(true);
-            googletag.pubads().enableSyncRendering();
-            googletag.pubads().collapseEmptyDivs();
-            googletag.enableServices();
-        });
-    </script>
- 
  
 <script type="text/javascript" src="http://st.wgplayer.com/rainbowdressup.com/wgAds.desktop.conf.js" data-cfasync="false"></script>
 <script type="text/javascript" src="http://st.wgplayer.com/rainbowdressup.com/js/oWxu5O3rP0KQCvEf8OtgqA/2321989302/wgAds.js" data-cfasync="false"></script>
@@ -255,6 +204,15 @@ By using this site, you signify your assent to the &nbsp;RainbowDressup.com&nbsp
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
 <!-- End Cookie Consent plugin -->
+
+<!-- CPMStar popunder -->
+<script type="text/javascript">
+    var cpmstar_popunder_settings = {
+        pid: 35196
+    };
+    t =document.getElementsByTagName('script');s =document.createElement('script');s.src = (document.location.protocol== 'https:' ? '//server' : '//cdn') + '.cpmstar.com/cached/js/popunder_v101.pack.js';s.type='text/javascript';s.async='';t[0].parentNode.insertBefore(s,t[0]);
+</script>
+<!-- end CPMStar popunder -->
 
 
 
