--- a/c/ch/che/checkpnrstatusirctc.in.html
+++ b/c/ch/che/checkpnrstatusirctc.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the checkpnrstatusirctc.in privacy policy that was archived on 2016-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161215022759id_/http%3A//checkpnrstatusirctc.in/privacy-policy-terms-and-conditions) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the checkpnrstatusirctc.in privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606003403id_/http%3A//checkpnrstatusirctc.in/privacy-policy-terms-and-conditions) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
@@ -73,7 +73,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="/train-running-status">Train Status</a></li>
+                <li><a href="/train-running-status">Train Live Status</a></li>
                 <li>
                     <a href="/train-schedule">Train Schedule</a>
                 </li>
