--- a/f/fo/for/forexdirectory.net.html
+++ b/f/fo/for/forexdirectory.net.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the forexdirectory.net privacy policy that was archived on 2016-09-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160918082442id_/http%3A//www.forexdirectory.net/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the forexdirectory.net privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606003623id_/http%3A//www.forexdirectory.net/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
  <title>Forex Directory</title>
 
@@ -90,15 +90,6 @@ Except as otherwise stated in this Privacy Statement, this document only address
 </font></p><p><font face="arial" size="3">
 Changes to this Privacy Statement<br>
 We reserve the right, at any time and without notice, to add to, change, update, or modify this Privacy Statement, simply by posting such change, update, or modification on our Website and without any other notice to you.  Any such change, update, or modification will be effective immediately upon posting on our Website.
-</font></p><p><font face="arial" size="3">
-Contact Us:<br>
-By Phone:<br>
-647 955 2739<br>
-Mon-Fri From 10am to 10pm Eastern Time
-</font></p><p><font face="arial" size="3">
-By Address:<br>
-Forex Directory<br>
-10 Lucinda Court, Toronto, Ontario, M3L 1R3
 </font>
 
-<script type="text/javascript" async="" src="//np.lexity.com/embed/YW/07cd49457beed90df18845eff5a3dcb8?id=3ccc315f7c73"></script><script language="JavaScript" src="http://l.yimg.com/d/lib/smb/js/hosting/cp/js_source/whv2_001.js"></script><script language="javascript">geovisit();</script><noscript><img src="http://visit.webhosting.yahoo.com/visit.gif?us1474187082" alt="setstats" border="0" width="1" height="1"></noscript><script type="text/javascript">(function (d, w) {var x = d.getElementsByTagName('SCRIPT')[0];var f = function () {var s = d.createElement('SCRIPT');s.type = 'text/javascript';s.async = true;s.src = "//np.lexity.com/embed/YW/07cd49457beed90df18845eff5a3dcb8?id=3ccc315f7c73";x.parentNode.insertBefore(s, x);};w.attachEvent ? w.attachEvent('onload',f) :w.addEventListener('load',f,false);}(document, window));</script></p></body></html>
+</p></body></html>
