filetypeadvisor.com (archived on 2017-06-06)
{
  "alexa_rank": 141651,
  "analysis_subcorpus": true,
  "categories": "informationtech",
  "char_count": 2570,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.3,
  "homepage_snapshot_redirected_domain": "filetypeadvisor.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170504022048id_/http://www.filetypeadvisor.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170504022048id_/http%3A//filetypeadvisor.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "filetypeadvisor.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606003745id_/http%3A//www.filetypeadvisor.com/privacy-policy.htm",
  "policy_title": "Privacy Policy",
  "policy_url": "filetypeadvisor.com/privacy-policy.htm",
  "sha1": "80301f27c77dc13669e72ba48186278bbcd4dcf1",
  "simhash": 8114295511162114109,
  "simhash_updated": false,
  "site_hostname": "filetypeadvisor.com",
  "site_url": "http://filetypeadvisor.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170606003745",
  "word_count": 398,
  "year": 2017
}

--- a/f/fi/fil/filetypeadvisor.com.html
+++ b/f/fi/fil/filetypeadvisor.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the filetypeadvisor.com privacy policy that was archived on 2016-11-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161122133335id_/http%3A//www.filetypeadvisor.com/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the filetypeadvisor.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606003745id_/http%3A//www.filetypeadvisor.com/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <title>Privacy Policy</title>
@@ -101,12 +101,12 @@ window.google_analytics_uacct = "UA-139140-20";
                 <div class="popular">
 
 <ul>
-<li class="gray"><a href="/extension/xz"><img src="/format-icons/xz.png" width="32" height="32" alt="XZ">XZ</a></li>
-<li><a href="/extension/inp"><img src="/icons/blank.png" width="32" height="32" alt="INP">INP</a></li>
-<li class="gray"><a href="/extension/webp"><img src="/format-icons/webp.png" width="32" height="32" alt="WEBP">WEBP</a></li>
-<li><a href="/extension/mde"><img src="/format-icons/mde.png" width="32" height="32" alt="MDE">MDE</a></li>
-<li class="gray"><a href="/extension/w2p"><img src="/format-icons/w2p.png" width="32" height="32" alt="W2P">W2P</a></li>
-<li><a href="/extension/vol"><img src="/icons/blank.png" width="32" height="32" alt="VOL">VOL</a></li>
+<li class="gray"><a href="/extension/wsxz"><img src="/format-icons/wsxz.png" width="32" height="32" alt="WSXZ">WSXZ</a></li>
+<li><a href="/extension/axp"><img src="/format-icons/axp.png" width="32" height="32" alt="AXP">AXP</a></li>
+<li class="gray"><a href="/extension/psc"><img src="/icons/blank.png" width="32" height="32" alt="PSC">PSC</a></li>
+<li><a href="/extension/tsv"><img src="/format-icons/tsv.png" width="32" height="32" alt="TSV">TSV</a></li>
+<li class="gray"><a href="/extension/pk"><img src="/format-icons/pk.png" width="32" height="32" alt="PK">PK</a></li>
+<li><a href="/extension/ogg"><img src="/format-icons/ogg.png" width="32" height="32" alt="OGG">OGG</a></li>
 </ul>
 
                 </div>
@@ -202,7 +202,7 @@ revision of our Privacy Policy.</p>
     </div>
     <div class="footer">
         <div class="layout">
-            <div class="copy">© 2013-2016 File Type Advisor - All rights reserved</div>
+            <div class="copy">© 2013-2017 File Type Advisor - All rights reserved</div>
             <div class="menu">
                 <ul>
                     <li><a href="/">Home</a> | </li>
