mariomayhem.com (archived on 2017-06-06)
{
  "alexa_rank": 320654,
  "analysis_subcorpus": true,
  "categories": "games",
  "char_count": 3001,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.44,
  "homepage_snapshot_redirected_domain": "mariomayhem.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170307000028id_/http://www.mariomayhem.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170307000028id_/http%3A//mariomayhem.com",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mariomayhem.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606003821id_/http%3A//www.mariomayhem.com/privacy.php",
  "policy_title": "Mario Mayhem Privacy",
  "policy_url": "mariomayhem.com/privacy.php",
  "sha1": "83089dcd7274ff2d4c55e01ede4de4e3c73edbdd",
  "simhash": 1456268632365773702,
  "simhash_updated": false,
  "site_hostname": "mariomayhem.com",
  "site_url": "http://mariomayhem.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170606003821",
  "word_count": 476,
  "year": 2017
}

--- a/m/ma/mar/mariomayhem.com.html
+++ b/m/ma/mar/mariomayhem.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mariomayhem.com privacy policy that was archived on 2016-11-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161129201031id_/http%3A//www.mariomayhem.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mariomayhem.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606003821id_/http%3A//www.mariomayhem.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js"><!--<![endif]--><head>
 <meta charset="utf-8">
@@ -239,17 +239,17 @@ If you wish to disable cookies, you may do so through your individual   browser 
        <div class="rightNavContentBox">
       
    
-<p class="blogDate"> March 22, 2016</p>	
+<p class="blogDate"> May 24, 2017</p>	
 <h4 class="blogTitle">
-<a href="http://www.mariomayhem.com/bowsers_blog/?p=1396" target="_blank" title="The Top 7 Nintendo Game Casinos">
-The Top 7 Nintendo Game Casinos</a>
+<a href="http://www.mariomayhem.com/bowsers_blog/?p=1422" target="_blank" title="Alternate Mario Worlds: Could Mario Ever Move to a New Gaming Arena?">
+Alternate Mario Worlds: Could Mario Ever Move to a New Gaming Arena?</a>
 </h4>
 
  
-<p class="blogDate"> February 25, 2016</p>	
+<p class="blogDate"> May 18, 2017</p>	
 <h4 class="blogTitle">
-<a href="http://www.mariomayhem.com/bowsers_blog/?p=1383" target="_blank" title="10 most FRIGHTENING video game Easter Eggs">
-10 most FRIGHTENING video game Easter Eggs</a>
+<a href="http://www.mariomayhem.com/bowsers_blog/?p=1417" target="_blank" title="How Minigames In Mario Just Accentuate How Much We Love Him!">
+How Minigames In Mario Just Accentuate How Much We Love Him!</a>
 </h4>
 
 	
@@ -309,7 +309,7 @@ The Top 7 Nintendo Game Casinos</a>
 	<div class="rightLinkBox">
 	   <div class="rightNavSectionBox"> 
           <a href="http://www.mariomayhem.com/fun/draw_a_mario/index.php"><img src="http://www.mariomayhem.com/images/draw_a_mario.png" alt="Draw a Mario"></a>
-<center><a href="http://www.mariomayhem.com/fun/draw_a_mario/view.php?image=61278.png"><img src="http://www.mariomayhem.com/fun/draw_a_mario/gallery/61278.png" width="100" height="100" border="0"></a></center>  
+<center><a href="http://www.mariomayhem.com/fun/draw_a_mario/view.php?image=100402.png"><img src="http://www.mariomayhem.com/fun/draw_a_mario/gallery/100402.png" width="100" height="100" border="0"></a></center>  
        </div>
 	   <div class="blockHouse">
 	     <img src="http://www.mariomayhem.com/images/block.gif" class="hitBlock"><img src="http://www.mariomayhem.com/images/block.gif" class="hitBlock"><img src="http://www.mariomayhem.com/images/block.gif" class="hitBlock"><img src="http://www.mariomayhem.com/images/block.gif" class="hitBlock"><img src="http://www.mariomayhem.com/images/block.gif" class="hitBlock"><img src="http://www.mariomayhem.com/images/block.gif" class="hitBlock"><img src="http://www.mariomayhem.com/images/block.gif" class="hitBlock"><img src="http://www.mariomayhem.com/images/block.gif" class="hitBlock"><img src="http://www.mariomayhem.com/images/block.gif" class="hitBlock">
@@ -398,10 +398,6 @@ The Top 7 Nintendo Game Casinos</a>
 	   <div class="footerNavSectionBox"> 
           <img src="http://www.mariomayhem.com/images/mario_friends.png" width="127" height="31" style="margin-bottom:5px;" alt="Mario Friends">
           <br>
-          <a target="_blank" href="http://www.coolvideogamestuff.com/"><img src="http://www.mariomayhem.com/images/cvgs_button.jpg" alt="Cool Video Game Stuff" title="Check out Cool Video Game Stuff" border="0" width="88" height="31"></a>
-          <br>
-          <a target="_blank" href="http://www.supermarioshow.com/"><img src="http://www.supermarioshow.com/sms_button.gif" alt="Super Mario Show" border="0" width="88" height="31"></a>
-          <br>
           <a href="http://www.superluigibros.com" rel="nofollow" target="_blank"><img src="http://www.mariomayhem.com/images/tmbbutton.jpg" alt="The Mario Bros" width="88" height="31" border="0"></a><br>
           <a target="_blank" href="http://boomansion.net/"><img src="http://boomansion.net/affiliates/bmbutton.png" alt="Boo Mansion" border="0" width="88" height="31"></a>
           <br>
@@ -410,6 +406,7 @@ The Top 7 Nintendo Game Casinos</a>
 		  <a href="http://www.freearcadegallery.com" target="_blank">Free Arcade</a><br>
 		  <a href="http://slappedham.com/" target="_blank">Slapped Ham</a><br>
 		  <a href="http://www.dangerdolan.tv/" target="_blank">Danger Dolan</a><br>
+		  <a href="http://www.lifeandmindmatters.com/" target="_blank">Life and Mind Matters</a><br>
           		 
        </div>
 	   </div>
@@ -429,7 +426,7 @@ The Top 7 Nintendo Game Casinos</a>
 var cpmstar_rnd=Math.round(Math.random()*999999);
 var cpmstar_pid=23760;
 document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
-</script><script language="Javascript" src="//server.cpmstar.com/view.aspx?poolid=23760&amp;script=1&amp;rnd=558680"></script>
+</script><script language="Javascript" src="//server.cpmstar.com/view.aspx?poolid=23760&amp;script=1&amp;rnd=632707"></script>
 
        </div>
 	   </div>
@@ -449,7 +446,7 @@ document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/vie
 <span style="font-family: verdana,arial,helvetica; font-size: 10px;"></span><table width="265" height="30" bgcolor="#fdfdfd" style="border: 1px green solid;"><tbody><tr><td>
 <img src="http://www.mariomayhem.com/downloads/images/smb1/SMB_toadwav.gif" width="32" height="32" alt="Visitors online">
 </td>
-<td align="center"><span style="font-family: verdana,arial,helvetica; font-size: 11px; font-weight: bold; color: #aaccaa;">Total users currently online - <font color="red">19</font></span><br></td></tr></tbody></table></center>
+<td align="center"><span style="font-family: verdana,arial,helvetica; font-size: 11px; font-weight: bold; color: #aaccaa;">Total users currently online - <font color="red">20</font></span><br></td></tr></tbody></table></center>
 
 <script type="text/javascript">
 var infolink_pid = 8584;
@@ -458,7 +455,7 @@ var infolink_link_color = 'ffa500';
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 
 <!--INFOLINKS_OFF-->
-<p align="center">©2006 - 2016 mariomayhem.com </p>
+<p align="center">©2006 - 2017 mariomayhem.com </p>
 <p align="center">We are in  no way affiliated with <a href="http://www.nintendo.co.jp/" target="_blank" rel="nofollow">Nintendo</a>, <a href="http://www.nintendo.com/" target="_blank" rel="nofollow">Nintendo of America</a>, or any other mentioned companies. Super Mario Bros. , character names and all Mario Sprites are copyrights of Nintendo Co. Ltd.<br>
   <a href="http://www.mariomayhem.com/privacy.php">Privacy</a></p>
 <!--INFOLINKS_ON-->
