--- a/t/te/tec/technicaltradingindicators.com.html
+++ b/t/te/tec/technicaltradingindicators.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the technicaltradingindicators.com privacy policy that was archived on 2016-11-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161110052658id_/http%3A//www.technicaltradingindicators.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the technicaltradingindicators.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606003823id_/http%3A//www.technicaltradingindicators.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml" class=" javascript"><head>
 	
@@ -20,7 +20,7 @@
 	<link rel="shortcut icon" href="http://cdn2.bigcommerce.com/server200/5ff42/product_images/favicon.ico">
 
 	<!-- begin: js page tag -->
-	<script type="text/javascript" async="" src="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/app/assets/js/vendor/bigcommerce/analytics.min.js"></script><script type="text/javascript" async="" defer="" src="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/jirafe/beacon_api.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="javascript" type="text/javascript">//<![CDATA[
+	<script type="text/javascript" async="" src="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/app/assets/js/vendor/bigcommerce/analytics.min.js"></script><script type="text/javascript" async="" defer="" src="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/jirafe/beacon_api.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="javascript" type="text/javascript">//<![CDATA[
 		(function(){
 			// this happens before external dependencies (and dom ready) to reduce page flicker
 			var node, i;
@@ -34,11 +34,11 @@
 	//]]></script>
 	<!-- end: js page tag -->
 
-	<link href="http://cdn5.bigcommerce.com/r-51cf31f6fa157a3deaf6806f94dd5e7365e2e3ab/themes/__master/Styles/styles.css" type="text/css" rel="stylesheet"><link href="http://www.technicaltradingindicators.com/templates/__custom/Styles/styles.css?t=1398725710" media="all" type="text/css" rel="stylesheet">
+	<link href="http://cdn5.bigcommerce.com/r-b894c2cb799bac74ce4990fade5989902a6e1a9d/themes/__master/Styles/styles.css" type="text/css" rel="stylesheet"><link href="http://www.technicaltradingindicators.com/templates/__custom/Styles/styles.css?t=1398725710" media="all" type="text/css" rel="stylesheet">
 <link href="http://cdn5.bigcommerce.com/r-c71b9995f4a706510d16ad47d2472c26eb88e9bf/themes/Magnificent/Styles/iselector.css" media="all" type="text/css" rel="stylesheet">
 <link href="http://www.technicaltradingindicators.com/templates/__custom/Styles/blue.css?t=1398725710" media="all" type="text/css" rel="stylesheet">
 <!--[if IE]><link href="http://cdn5.bigcommerce.com/r-c71b9995f4a706510d16ad47d2472c26eb88e9bf/themes/Magnificent/Styles/ie.css" media="all" type="text/css" rel="stylesheet" /><![endif]-->
-<link href="http://cdn5.bigcommerce.com/r-51cf31f6fa157a3deaf6806f94dd5e7365e2e3ab/themes/__master/Styles/product.attributes.css" type="text/css" rel="stylesheet"><link href="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/jquery/themes/cupertino/ui.all.css" type="text/css" rel="stylesheet"><link href="http://cdn5.bigcommerce.com/r-51cf31f6fa157a3deaf6806f94dd5e7365e2e3ab/themes/__master/Styles/product.quickview.css" type="text/css" rel="stylesheet"><link type="text/css" rel="stylesheet" href="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/jquery/plugins/imodal/imodal.css?d15cf">
+<link href="http://cdn5.bigcommerce.com/r-b894c2cb799bac74ce4990fade5989902a6e1a9d/themes/__master/Styles/product.attributes.css" type="text/css" rel="stylesheet"><link href="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/jquery/themes/cupertino/ui.all.css" type="text/css" rel="stylesheet"><link href="http://cdn5.bigcommerce.com/r-b894c2cb799bac74ce4990fade5989902a6e1a9d/themes/__master/Styles/product.quickview.css" type="text/css" rel="stylesheet"><link type="text/css" rel="stylesheet" href="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/jquery/plugins/imodal/imodal.css?c6768">
 
 	<!-- Tell the browsers about our RSS feeds -->
 	
@@ -71,11 +71,11 @@
 
 	<style type="text/css"> #Header { background-image: url("http://cdn1.bigcommerce.com/server200/5ff42/product_images/header_images/Magnificent_headerImage.jpg"); } </style>
 
-	<script type="text/javascript" src="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/jquery/1.7.2/jquery.min.js"></script>
-	<script type="text/javascript" src="http://cdn6.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/menudrop.js?"></script>
-	<script type="text/javascript" src="http://cdn6.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/common.js?"></script>
-	<script type="text/javascript" src="http://cdn6.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/iselector.js?"></script>
-    <script src="http://cdn6.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/viewport.js?"></script>
+	<script type="text/javascript" src="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="http://cdn6.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/menudrop.js?"></script>
+	<script type="text/javascript" src="http://cdn6.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/common.js?"></script>
+	<script type="text/javascript" src="http://cdn6.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/iselector.js?"></script>
+    <script src="http://cdn6.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/viewport.js?"></script>
 
 	<script type="text/javascript">
 	//<![CDATA[
@@ -88,14 +88,14 @@
 	</script>
 	
 <script type="text/javascript">
-function beacon_deferred(beacon_api) { beacon_api.set_cookie_domain(".technicaltradingindicators.com");beacon_api.pageview('', 1386090, "other", {"customer":{"id":"anonymous"}}, '3b8a45a158cc0fbd64db4f063618457c8cc2f68b', 'ca20805e-2677-4121-961d-771d85135cd1');}
+function beacon_deferred(beacon_api) { beacon_api.set_cookie_domain(".technicaltradingindicators.com");beacon_api.pageview('', 1386090, "other", {"customer":{"id":"anonymous"}}, '42c2f522-7744-4091-ad87-61e18550a5b5', 'fb155639-c0b0-49f9-b188-6add77a8614a');}
 </script>
 <script type="text/javascript">
-(function(){var d=document,g=d.createElement('script'),s=d.getElementsByTagName('script')[0];g.type='text/javascript';g.defer=g.async=true;g.src='http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/jirafe/beacon_api.js';s.parentNode.insertBefore(g,s);})();
+(function(){var d=document,g=d.createElement('script'),s=d.getElementsByTagName('script')[0];g.type='text/javascript';g.defer=g.async=true;g.src='http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/jirafe/beacon_api.js';s.parentNode.insertBefore(g,s);})();
 </script>
-<script type="text/javascript" src="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/jquery/plugins/jqueryui/1.8.18/jquery-ui.min.js"></script>
-<script type="text/javascript" src="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/quickview.js"></script><script type="text/javascript" src="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/jquery/plugins/jquery.form.js?d15cf"></script>
-<script type="text/javascript" src="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/jquery/plugins/imodal/imodal.js?d15cf"></script>
+<script type="text/javascript" src="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/jquery/plugins/jqueryui/1.8.18/jquery-ui.min.js"></script>
+<script type="text/javascript" src="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/quickview.js"></script><script type="text/javascript" src="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/jquery/plugins/jquery.form.js?c6768"></script>
+<script type="text/javascript" src="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/jquery/plugins/imodal/imodal.js?c6768"></script>
 <script type="text/javascript">
     (function(){
         window.bcanalytics||(window.bcanalytics=[]),window.bcanalytics.methods=["debug","identify","track",
@@ -105,16 +105,16 @@ function beacon_deferred(beacon_api) { beacon_api.set_cookie_domain(".technicalt
             window.bcanalytics}};for(var i=0;i<window.bcanalytics.methods.length;i++)
             {var method=window.bcanalytics.methods[i];window.bcanalytics[method]=window.bcanalytics.factory(method)}
             window.bcanalytics.load=function(){var a=document.createElement("script");a.type="text/javascript",
-            a.async=!0,a.src="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/app/assets/js/vendor/bigcommerce/analytics.min.js";var b=document.getElementsByTagName("script")[0];
+            a.async=!0,a.src="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/app/assets/js/vendor/bigcommerce/analytics.min.js";var b=document.getElementsByTagName("script")[0];
             b.parentNode.insertBefore(a,b)},window.bcanalytics.SNIPPET_VERSION="2.0.8",window.bcanalytics.load();
-        bcanalytics.initialize({"Fornax":{"host":"https:\/\/analytics.bigcommerce.com","cdn":"http:\/\/cdn5.bigcommerce.com\/r-24ad00b322540d29ed5fbafca11a23df4565d362\/app\/assets\/js\/vendor\/bigcommerce\/fornax.min.js","defaultEventProperties":{"storeId":21423,"experiments":{"PROJECT-174.channel_twitter":"control","PROJECT-331.pos_manager":"on","PROJECT-632.square_export":"on","PROJECT-756.channel_pinterest":"on","PROJECT-756.pinterest_complex_products":"on","PROJECT-756.pinterest_material_options":"control","PROJECT-783.channel_facebook":"on","PROJECT-783.channel_facebook.disconnect":"on","OMNI-1010.channel_amazon.coming_soon":"on","OMNI-913.channel_amazon":"on","OMNI-1010.channel_ebay.coming_soon":"on","OMNI-764.channel_ebay":"control","OMNI-799.facebook_checkout":"on","PROJECT-453.enterprise_apps":"on","CP-78.cp_click_tracking":"control","PROJECT-917.shipping-manager-v2":"on","PROJECT-1082.promote_ppec":"on","BIG-28672.shipstation":"control","PROJECT-871.dashboard_redesign":"control"}},"defaultContext":{"source":"Bigcommerce Storefront"},"anonymousId":"ca20805e-2677-4121-961d-771d85135cd1"}});
+        bcanalytics.initialize({"Fornax":{"host":"https:\/\/analytics.bigcommerce.com","cdn":"http:\/\/cdn5.bigcommerce.com\/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d\/app\/assets\/js\/vendor\/bigcommerce\/fornax.min.js","defaultEventProperties":{"storeId":21423,"experiments":{"PROJECT-174.channel_twitter":"control","PROJECT-331.pos_manager":"on","PROJECT-632.square_export":"on","PROJECT-756.channel_pinterest":"on","PROJECT-756.pinterest_material_options":"control","PROJECT-783.channel_facebook":"on","PROJECT-783.channel_facebook.disconnect":"on","PROJECT-1245.amazon-payments.registration.eu":"on","PROJECT-1245.amazon-payments.registration.us":"on","PROJECT-1493.custom_order_status_labels":"control","OMNI-1010.channel_amazon.coming_soon":"on","OMNI-913.channel_amazon":"on","OMNI-2917.channel_buy_buttons":"on","OMNI-2918.google_shopping":"control","OMNI-1010.channel_ebay.coming_soon":"control","OMNI-764.channel_ebay":"on","OMNI-3167.channel_instagram.coming_soon":"on","OMNI-900.channel_amazon.amazon_variants":"control","OMNI-799.facebook_checkout":"on","OMNI-2943.channel_facebook.refactor":"control","OMNI-2999.products.cdn":"on","OMNI-3354.omnichannel.cdn":"on","BIG-29859.facebook_messenger_integration":"control","CP-78.cp_click_tracking":"control","PROJECT-1082.promote_ppec":"on","BIG-28672.shipstation":"on","PROJECT-871.dashboard_redesign":"on","PROJECT-974.order_notification":"on","ng-products":"control","ng-add-edit-products":"control","API-417.enable_api_oauth_account_creation":"on","CRO-5.new_product_listing":"off","CRO-16.left_align_buttons":"on","CRO-8.getting-started-content-test":"on","CRO-63.separate-design-options":"on","PROJECT-1441.dashboard.store_performance_channels":"on","PROJECT-1413.PinterestProductListings":"on","CRO-83.create_test_order_onboarding_card":"control","CP-860.switch_stores":"on","PROJECT-1413.PinterestChannelServiceAuth":"control","CRO-46.upload-logo-design":"control","CP-1284.search-ui":"control","PROJECT-1522.google_customer_reviews":"control","PROJECT-976.braintree.visa.checkout":"control","CP-1252.self_help.phase2":"control","DATA-2896.ng-analytics.enable":"control"}},"defaultContext":{"source":"Bigcommerce Storefront"},"anonymousId":"fb155639-c0b0-49f9-b188-6add77a8614a"}});
     })();
 </script>
 <script type="text/javascript">
 var BCData = {};
 </script>
 
-	<script type="text/javascript" src="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/quicksearch.js"></script>
+	<script type="text/javascript" src="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/quicksearch.js"></script>
 	
 </head>
 
@@ -340,7 +340,7 @@ var BCData = {};
         <div id="Footer">
             <p>
                 All prices are in <span title="Default Currency">USD</span>
-                Copyright 2016 TechnicalTradingIndicators.com.
+                Copyright 2017 TechnicalTradingIndicators.com.
                 <br>
 <br>
 <br>
@@ -371,7 +371,7 @@ var BCData = {};
         
         
 
-        <script type="text/javascript" src="http://cdn5.bigcommerce.com/r-24ad00b322540d29ed5fbafca11a23df4565d362/javascript/visitor.js"></script>
+        <script type="text/javascript" src="http://cdn5.bigcommerce.com/r-506a4cf55ab49ee0c0d9d0ecfe7cdec522e8d20d/javascript/visitor.js"></script>
 
         <script type="text/javascript">
 $(document).ready(function() {
