--- a/j/ja/ja6/ja606.co.uk.html
+++ b/j/ja/ja6/ja606.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ja606.co.uk privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119023328id_/http%3A//www.ja606.co.uk/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ja606.co.uk privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606004122id_/http%3A//www.ja606.co.uk/pages/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><!--<![endif]--><head>
 <meta charset="utf-8">
@@ -9,20 +9,21 @@
 <title>Just Another 606 - Privacy Statement</title>
 <!-- Mobile viewport optimized: j.mp/bplateviewport -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script async="" src="//ssl.google-analytics.com/ga.js"></script><script>
+ <script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script async="" src="https://ssl.google-analytics.com/ga.js"></script><script>
     var _gaq=[["_setAccount","UA-23386222-1"],["_trackPageview"]];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-    g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
+    //g.src=("https:"==location.protocol || true?"//ssl":"//www")+".google-analytics.com/ga.js";
+    g.src="https://ssl.google-analytics.com/ga.js";
     s.parentNode.insertBefore(g,s)}(document,"script"));
  </script>
-<link rel="shortcut icon" href="http://s3-eu-west-1.amazonaws.com/ja606/favicon.ico">
+<link rel="shortcut icon" href="https://s3-eu-west-1.amazonaws.com/ja606/favicon.ico">
 <!-- CSS: implied media="all" -->
-<link rel="stylesheet" href="http://s3-eu-west-1.amazonaws.com/ja606/css/style_combined.1.3.css">
+<link rel="stylesheet" href="https://s3-eu-west-1.amazonaws.com/ja606/css/style_combined.1.3.css">
 <!-- Uncomment if you are specifically targeting less enabled mobile browsers
-<link rel="stylesheet" media="handheld" href="http://s3-eu-west-1.amazonaws.com/ja606/css/handheld.css">  -->
+<link rel="stylesheet" media="handheld" href="https://s3-eu-west-1.amazonaws.com/ja606/css/handheld.css">  -->
 <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
 <!--[if lt IE 9]>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
 <![endif]-->
 
 
@@ -33,15 +34,15 @@
     window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website. By continuing to browse our website, you are agreeing to our use of cookies","dismiss":"Got it!","learnMore":"More info","link":"http://www.ja606.co.uk/pages/privacy","theme":"light-floating"};
 </script>
 
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
 <!-- End Cookie Consent plugin -->
-<!--script data-cfasync="false" src="//surgeprice.com/display/ads/JhCWPAPipg7AEJsNv/ariel.js"></script!-->
+<!--script data-cfasync="false" src="https://surgeprice.com/display/ads/JhCWPAPipg7AEJsNv/ariel.js"></script!-->
 </head>
 <body>
 <div id="container">
   <header>
     <div id="banner-top"> </div>
-    <div id="banner-middle"><img style="width:1070px;height:46px;" src="http://s3-eu-west-1.amazonaws.com/ja606/img/ja606_banner.gif" alt="JA606 Banner"></div>
+    <div id="banner-middle"><img style="width:1070px;height:46px;" src="https://s3-eu-west-1.amazonaws.com/ja606/img/ja606_banner.gif" alt="JA606 Banner"></div>
     <div id="banner-bottom"> </div>
   </header>
   <div id="main">
@@ -75,9 +76,23 @@
     <div id="content-area" role="main">
 		<div class="content-area630" id="content-area630">
   <div class="leaderboard grid-margin">  
-  <div id="ldb" style="width:728px; height:90px;">
-     <!--SCRIPT SRC="http://ads.pubsqrd.com/ttj?id=1297465" TYPE="text/javascript"></SCRIPT-->
-  </div>
+   <div id="ldb_new" style="width:728px; height:90px;">
+             <!--div id='crt_async2' style='width:728px; height:90px;' margin='0px'>
+		<script type='text/javascript'>
+		var crt_curl = '';
+		(function(w,d,s,c,z,u){var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),l = '&loc=' + encodeURIComponent(w.location), r = d.referrer ? '&referer=' + encodeURIComponent(d.referrer) : '', g = u.substring(0,4) == 'http' ? '&ct0='+encodeURIComponent(u) : '', cb="&cb="+Math.floor(Math.random()*99999999999) ;j.async='true';j.src=(("https:"==location.protocol || true?"https:":"http:")+
+		'//cas.criteo.com/delivery/ajs.php?zoneid='+z+'&containerid='+c+g+l+r+cb).substring(0,2000);f.parentNode.insertBefore(j,f);
+		})(window,document,'script','crt_async2',475030,crt_curl);
+		</script>
+	</div-->
+       <div id="switch_placeholder_f636566d22e66e02f6c05bc59db65806" class="switch_placeholder"></div>
+<script> (__scads = window.__scads ||
+[]).push({"z":9813,"targetId":"switch_placeholder_f636566d22e66e02f6c05bc59db65806","domain":"delivery.c.switchadhub.com","width":"0","height":"0"});
+</script>
+<script async="" src="//delivery.c.switchadhub.com/adserver/sat.js"></script>
+       </div>
+ 
 </div>
  
   <div id="sign-in">
@@ -109,7 +124,7 @@
 <h1 style="font-size:90%">Log Files</h1>
 <p>Every time you request or download a file from the web site, the Operators may store data about these events and your IP address in a log file. The Operators may use this information to analyze trends, administer the web site, track users' movements, and gather broad demographic information for aggregate use or for other business purposes.</p>
 <h1 style="font-size:90%">Cookies</h1>
-<p>Our site may use a feature of your browser to set a "cookie" on your computer. Cookies are small packets of information that a web site's computer stores on your computer. The Operators's web sites can then read the cookies whenever you visit our site. We may use cookies in a number of ways, such as to save your password so you don't have to re-enter it each time you visit our site, to deliver content specific to your interests and to track the pages you've visited. These cookies allow us to use the information we collect to customize your experience so that your visit to our site is as relevant and as valuable to you as possible.  In addition we we also serve display advertising from various providers, including Google AdSense. These adverts may appear as text adverts, static images or animated images. Google provides a <a class="gtrack-link" href="http://www.google.com/intl/en-GB/policies/privacy/ads/">privacy policy for AdSense</a> including an opt-out.</p>
+<p>Our site may use a feature of your browser to set a "cookie" on your computer. Cookies are small packets of information that a web site's computer stores on your computer. The Operators's web sites can then read the cookies whenever you visit our site. We may use cookies in a number of ways, such as to save your password so you don't have to re-enter it each time you visit our site, to deliver content specific to your interests and to track the pages you've visited. These cookies allow us to use the information we collect to customize your experience so that your visit to our site is as relevant and as valuable to you as possible.  In addition we we also serve display advertising from various providers, including Google AdSense. These adverts may appear as text adverts, static images or animated images. Google provides a <a class="gtrack-link" href="https://www.google.com/intl/en-GB/policies/privacy/ads/">privacy policy for AdSense</a> including an opt-out.</p>
 <p>Most browser software can be set up to deal with cookies. You may modify your browser preference to provide you with choices relating to cookies. You have the choice to accept all cookies, to be notified when a cookie is set or to reject all cookies. If you choose to reject cookies, certain of the functions and conveniences of our web site may not work properly, and you may be unable to use those of the Operators's services that require registration in order to participate, or you will have to re-register each time you visit our site. Most browsers offer instructions on how to reset the browser to reject cookies in the "Help" section of the toolbar. We do not link non-personal information from cookies to personally identifiable information without your permission.</p>
 
 <h1 style="font-size:90%">Web Beacons</h1>
@@ -146,32 +161,48 @@
 </div>
   <div class="right-sidebar">
       <!-- _SKY -->
-      <div id="sky" style="width:160px; height:600px;">
-         <!--SCRIPT SRC="http://ads.pubsqrd.com/ttj?id=1297552" TYPE="text/javascript"></SCRIPT-->
-      </div>
+       <!-- _SKY -->
+      <div id="sky_new" style="width:160px; height:600px;">
+                 <!--div id='crt_async3' style='width:160px; height:600px;'  margin='0px'>
+             <script type='text/javascript'>
+              var crt_curl = '';
+              (function(w,d,s,c,z,u){var f=d.getElementsByTagName(s)[0],
+              j=d.createElement(s),l = '&loc=' + encodeURIComponent(w.location), r = d.referrer ? '&referer=' + encodeURIComponent(d.referrer) : '', g = u.substring(0,4) == 'http' ? '&ct0='+encodeURIComponent(u) : '', cb="&cb="+Math.floor(Math.random()*99999999999) ;j.async='true';j.src=(("https:"==location.protocol || true?"https:":"http:")+
+              '//cas.criteo.com/delivery/ajs.php?zoneid='+z+'&containerid='+c+g+l+r+cb).substring(0,2000);f.parentNode.insertBefore(j,f);
+              })(window,document,'script','crt_async3',476388,crt_curl);
+              </script>
+        </div-->
+        <div id="switch_placeholder_41843ff706e53f80c77ed0c3f56d1bbf" class="switch_placeholder"></div>
+<script> (__scads = window.__scads || []).push({"z":9812,"targetId":"switch_placeholder_41843ff706e53f80c77ed0c3f56d1bbf","domain":"delivery.c.switchadhub.com","width":"0","height":"0"}); </script>
+<script async="" src="//delivery.c.switchadhub.com/adserver/sat.js"></script>
+	 </div>
+ 
   </div>     </div>
   </div>	
   <footer>
     <div id="footer-bar" style="position:relative">
-      <span style="text-align:center;width:100%;position:absolute;top:25%;">© JA606.co.uk 2011-2015 | <a href="/pages/rules/">House Rules</a> | <a href="/pages/tcs">Terms &amp; Conditions</a> | <a href="/pages/privacy">Privacy Policy</a> | <a href="/pages/advertise">Advertise</a> | Emoticons © BBC, which has no affiliation with JA606.</span>
+      <span style="text-align:center;width:100%;position:absolute;top:25%;">© JA606.co.uk 2011-2017 | <a href="/pages/rules/">House Rules</a> | <a href="/pages/tcs">Terms &amp; Conditions</a> | <a href="/pages/privacy">Privacy Policy</a> | <a href="/pages/advertise">Advertise</a> | Emoticons © BBC, which has no affiliation with JA606.</span>
     </div>
       </footer>
 </div>
 <!--! end of #container --> 
 <!-- JavaScript at the bottom for fast page loading --> 
 <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary --> 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script> 
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.5.1.min.js">\x3C/script>')</script><script src="js/libs/jquery-1.5.1.min.js"></script> 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" async="true"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" async="true"></script>
 <!-- scripts concatenated and minified via ant build script--> 
-<!--script src="http://s3-eu-west-1.amazonaws.com/ja606/js/plugins.js" async="true"></script-->
-<script src="http://s3-eu-west-1.amazonaws.com/ja606/js/article.5.16.js"></script>
-<script>
+<!--script src="https://s3-eu-west-1.amazonaws.com/ja606/js/plugins.js" async="true"></script-->
+<script src="https://s3-eu-west-1.amazonaws.com/ja606/js/article.5.17.js"></script>
+<!--script src="/js/article_uncompressed.js"></script-->
+<!--250117- No idea what the pubsquared code below was doing-->
+<!--script>
 if (( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) )==false) {
 var src = "http://ads.pubsqrd.com/ttj?id=1299288"
 document.write('<script src="'+src+'"></scr'+'ipt>');
 }
-</script><script src="http://ads.pubsqrd.com/ttj?id=1299288"></script>
+</script-->
+
 <!-- end scripts--> 
 <!--[if lt IE 7 ]>
     <script src="js/libs/dd_belatedpng.js"></script>
@@ -184,13 +215,13 @@ document.write('<script src="'+src+'"></scr'+'ipt>');
   (function() {
     var s = document.createElement("script"), el =
 document.getElementsByTagName("script")[0]; s.async = true;
-    s.src = (document.location.protocol == "https:" ? "https://sb" : "http://b") +
+    s.src = (document.location.protocol == "https:" || true ? "https://sb" : "http://b") +
 ".scorecardresearch.com/beacon.js";
     el.parentNode.insertBefore(s, el);
   })();
 </script>
 <noscript>
-  <img src="http://b.scorecardresearch.com/p?c1=2&c2=12294186&cv=2.0&cj=1"
+  <img src="https://sb.scorecardresearch.com/p?c1=2&c2=12294186&cv=2.0&cj=1"
 />
 </noscript>
 <!-- End comScore Tag -->
@@ -200,7 +231,7 @@ var _qevents = _qevents || [];
 
 (function() {
 var elem = document.createElement('script');
-elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
+elem.src = (document.location.protocol == "https:" || true ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
 elem.async = true;
 elem.type = "text/javascript";
 var scpt = document.getElementsByTagName('script')[0];
@@ -214,14 +245,14 @@ qacct:"p-gsTdmzJWwxMzu"
 
 <noscript>
 <div style="display:none;">
-<img src="//pixel.quantserve.com/pixel/p-gsTdmzJWwxMzu.gif" border="0" height="1" width="1" alt="Quantcast"/>
+<img src="https://pixel.quantserve.com/pixel/p-gsTdmzJWwxMzu.gif" border="0" height="1" width="1" alt="Quantcast"/>
 </div>
 </noscript>
 <!-- End Quantcast tag -->
 <script type="text/javascript">
     (function() {
         function async_load(script_url){
-            var protocol = ('https:' == document.location.protocol ? 'https://' : 'http://');
+            var protocol = ('https:' == document.location.protocol || true ? 'https://' : 'http://');
             var s = document.createElement('script'); s.src = protocol + script_url;
             var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
         }
