--- a/c/cr/cro/crosswordnexus.com.html
+++ b/c/cr/cro/crosswordnexus.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the crosswordnexus.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119060632id_/http%3A//crosswordnexus.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the crosswordnexus.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606004343id_/http%3A//crosswordnexus.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Privacy Policy | Crossword Nexus</title>  <meta name="keywords" content="crossword, dictionary, lookup, clue, entry, answer, wikipedia,crossword dictionary">
@@ -23,7 +23,7 @@
   <link rel="stylesheet" type="text/css" href="/euphoric_style/nav_style.css">
   <link rel="icon" href="/favicon.png" type="image/png">
   <!-- Javascript -->
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="application/javascript" src="/js/sorttable.min.js"></script>
+<script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="application/javascript" src="/js/sorttable.min.js"></script>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/doubletaptogo.js"></script>
 <script type="text/javascript">
@@ -43,17 +43,14 @@ document.write('<a href="mailto:'+postcour+'">'+var1+'</a>')
 </script>
 
 <!-- Google analytics code -->
-<script type="text/javascript">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-30910514-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+  ga('create', 'UA-38752489-1', 'auto');
+  ga('send', 'pageview');
 
 </script>
 
@@ -109,35 +106,11 @@ if (window.innerWidth) {
 		<!--[if !IE]><!-->
 		<!-- <div class="fb-like" data-href="http://www.crosswordnexus.com" data-send="false" data-layout="box_count"  data-show-faces="false" data-font="arial"></div> -->
 		<!--<![endif]-->
-	</div><br><div id="adsense-new"><script type="text/javascript"><!--
-
-if (windowWidth < 468) // Previously: 468/.85
-{
-	/* Mobile header */
-	google_ad_client = "ca-pub-8027153686181018";
-	google_ad_slot = "5059296275";
-	google_ad_width = 320;
-	google_ad_height = 50;
-}
-else if (windowWidth < 728) // Previously: 728 / 0.85
-{
-	/* Medium Header */
-	google_ad_client = "ca-pub-8027153686181018";
-	google_ad_slot = "1156535476";
-	google_ad_width = 468;
-	google_ad_height = 60;
-}
-else
-{
-	/* Full Header */
-	google_ad_client = "ca-pub-8027153686181018";
-	google_ad_slot = "1593623368";
-	google_ad_width = 728;
-	google_ad_height = 90;
-}
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+	</div><br><div id="adsense-new"><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Responsive -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3426040091058831" data-ad-slot="3916211900" data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script></div>
   </div>
 </div>
