--- a/f/fi/fil/fillyz.com.html
+++ b/f/fi/fil/fillyz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fillyz.com privacy policy that was archived on 2016-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161216000732id_/http%3A//www.fillyz.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fillyz.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606005110id_/http%3A//www.fillyz.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html dir="ltr" class="ltr" lang="en"><head>
  
@@ -484,7 +484,7 @@ var google_remarketing_only = true;
 </div>
 </div>
 <div id="powered"><div class="container"><div class="copyright pull-left">
-Fillyz.com © 2016 All Rights Reserved..
+Fillyz.com © 2017 All Rights Reserved..
 </div>
 <div class="paypal pull-right"><img src="image/data/paypal.png" alt="We accept Credit Cards, Debit Cards &amp; Paypal Balance"><a href="#"></a></div>
 </div></div>
@@ -496,4 +496,4 @@ $(document).ready(function() {
   $(".stdpopup").colorbox();
 });
 //--></script>
-<script type="text/javascript">/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script></body></html>
+</body></html>
