cpagrip.com (archived on 2017-06-06)
{
  "alexa_rank": 22250,
  "analysis_subcorpus": true,
  "categories": "advertising;business",
  "char_count": 2597,
  "classifier_probability": 0.8,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.16,
  "homepage_snapshot_redirected_domain": "cpagrip.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170221142518id_/https://www.cpagrip.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170221142518id_/http%3A//cpagrip.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "cpagrip.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606011325id_/https%3A//www.cpagrip.com/privacy.php",
  "policy_title": "CPAGrip.com - Privacy Policy",
  "policy_url": "cpagrip.com/privacy.php",
  "sha1": "3966af873d92a8aa75dc8572d170c41f77639a4c",
  "simhash": 3369072449051406880,
  "simhash_updated": true,
  "site_hostname": "cpagrip.com",
  "site_url": "http://cpagrip.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20170606011325",
  "word_count": 438,
  "year": 2017
}

--- a/c/cp/cpa/cpagrip.com.html
+++ b/c/cp/cpa/cpagrip.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cpagrip.com privacy policy that was archived on 2016-04-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160414063800id_/https%3A//www.cpagrip.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cpagrip.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606011325id_/https%3A//www.cpagrip.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 			<title>CPAGrip.com - Privacy Policy</title>
@@ -50,6 +50,7 @@
 						<div class="login_holder">
 				<form style="margin:0;" method="post" action="https://www.cpagrip.com/admin/index.php" id="login_form" name="login_form">
 					<input type="hidden" value="true" name="login">
+										<input type="hidden" name="salt" value="e1cabae1c7d0ded0c9b3915f8ca53bb0">
 					<span style="color: #789A1E; vertical-align:middle; font-weight:bold;">Login </span>
 					<input onkeypress="DetectEnterPressed(event);" type="text" style="padding:0 2px; margin:1px; width:150px;" tabindex="10" placeholder="Email Address" class="input_login" id="user_login" name="email">
 					<input onkeypress="DetectEnterPressed(event);" type="password" style="padding:0 2px; margin:1px; width:125px;" tabindex="20" placeholder="Password" value="" class="input_login" id="user_pass" name="pwd">
@@ -327,7 +328,7 @@
 				<tbody><tr>
 					<td align="left">
 						<div class="footer_copy">
-							© Copyright 2011 - 2016 CPAGrip.com. All rights reserved.
+							© Copyright 2011 - 2017 CPAGrip.com. All rights reserved.
 						</div>
 					</td>
 					<td align="right">
