learning4kids.net (archived on 2017-06-06)
{
  "alexa_rank": 185064,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 6696,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.66,
  "homepage_snapshot_redirected_domain": "learning4kids.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170505232930id_/http://www.learning4kids.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170505232930id_/http%3A//learning4kids.net",
  "interval": "2017_A",
  "link_text": "PRIVACY",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "learning4kids.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606011801id_/http%3A//www.learning4kids.net/privacy",
  "policy_title": "Privacy | Learning 4 Kids",
  "policy_url": "learning4kids.net/privacy",
  "sha1": "ba9e25578f687b20f193e3ed9cb75b97ad279507",
  "simhash": 10683104075643637984,
  "simhash_updated": false,
  "site_hostname": "learning4kids.net",
  "site_url": "http://learning4kids.net",
  "smog": 14.93,
  "strict_updated": false,
  "timestamp": "20170606011801",
  "word_count": 1086,
  "year": 2017
}

--- a/l/le/lea/learning4kids.net.html
+++ b/l/le/lea/learning4kids.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the learning4kids.net privacy policy that was archived on 2016-11-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161122134653id_/http%3A//www.learning4kids.net/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the learning4kids.net privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606011801id_/http%3A//www.learning4kids.net/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -29,9 +29,9 @@ auto 10px auto;text-align:center}#ngfb-sidebar{cursor:pointer;text-align:center;
 		</script>
 <!-- /all in one seo pack -->
 		<script type="text/javascript">
-			window._wpemojiSettings = {"baseUrl":"http:\/\/s.w.org\/images\/core\/emoji\/72x72\/","ext":".png","source":{"concatemoji":"http:\/\/www.learning4kids.net\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.2.10"}};
+			window._wpemojiSettings = {"baseUrl":"http:\/\/s.w.org\/images\/core\/emoji\/72x72\/","ext":".png","source":{"concatemoji":"http:\/\/www.learning4kids.net\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.2.15"}};
 			!function(a,b,c){function d(a){var c=b.createElement("canvas"),d=c.getContext&&c.getContext("2d");return d&&d.fillText?(d.textBaseline="top",d.font="600 32px Arial","flag"===a?(d.fillText(String.fromCharCode(55356,56812,55356,56807),0,0),c.toDataURL().length>3e3):(d.fillText(String.fromCharCode(55357,56835),0,0),0!==d.getImageData(16,16,1,1).data[0])):!1}function e(a){var c=b.createElement("script");c.src=a,c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var f,g;c.supports={simple:d("simple"),flag:d("flag")},c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.simple&&c.supports.flag||(g=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",g,!1),a.addEventListener("load",g,!1)):(a.attachEvent("onload",g),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),f=c.source||{},f.concatemoji?e(f.concatemoji):f.wpemoji&&f.twemoji&&(e(f.twemoji),e(f.wpemoji)))}(window,document,window._wpemojiSettings);
-		</script><script src="http://www.learning4kids.net/wp-includes/js/wp-emoji-release.min.js?ver=4.2.10" type="text/javascript"></script>
+		</script><script src="http://www.learning4kids.net/wp-includes/js/wp-emoji-release.min.js?ver=4.2.15" type="text/javascript"></script>
 		<style type="text/css">
 img.wp-smiley,
 img.emoji {
@@ -46,9 +46,9 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
-<link rel="stylesheet" id="mailchimpSF_main_css-css" href="http://www.learning4kids.net/?mcsf_action=main_css&amp;ver=4.2.10" type="text/css" media="all">
-<link rel="stylesheet" id="open-sans-font-css" href="//fonts.googleapis.com/css?family=Open+Sans%3A300normal%2C400normal%2C400italic%2C600normal%2C600italic&amp;subset=all&amp;ver=4.2.10" type="text/css" media="all">
-<link rel="stylesheet" id="wprmenu-font-css" href="//fonts.googleapis.com/css?family=Open+Sans%3A400%2C300%2C600&amp;ver=4.2.10" type="text/css" media="all">
+<link rel="stylesheet" id="mailchimpSF_main_css-css" href="http://www.learning4kids.net/?mcsf_action=main_css&amp;ver=4.2.15" type="text/css" media="all">
+<link rel="stylesheet" id="open-sans-font-css" href="//fonts.googleapis.com/css?family=Open+Sans%3A300normal%2C400normal%2C400italic%2C600normal%2C600italic&amp;subset=all&amp;ver=4.2.15" type="text/css" media="all">
+<link rel="stylesheet" id="wprmenu-font-css" href="//fonts.googleapis.com/css?family=Open+Sans%3A400%2C300%2C600&amp;ver=4.2.15" type="text/css" media="all">
 <!-- This site uses the Google Analytics by Yoast plugin v5.4.2 - Universal disabled - https://yoast.com/wordpress/plugins/google-analytics/ -->
 <script type="text/javascript">
 
@@ -608,7 +608,7 @@ a.pib-hover-btn-link, .pib-img-under-wrapper a[href*="pinterest"].pib-hover-btn-
 	<form method="post" action="#mc_signup" id="mc_signup_form">
 		<input type="hidden" id="mc_submit_type" name="mc_submit_type" value="html">
 		<input type="hidden" name="mcsf_action" value="mc_submit_signup_form">
-		<input type="hidden" id="_mc_submit_signup_form_nonce" name="_mc_submit_signup_form_nonce" value="5808bf4d84">		
+		<input type="hidden" id="_mc_submit_signup_form_nonce" name="_mc_submit_signup_form_nonce" value="a6bac236c7">		
 		
 	<div class="mc_form_inside">
 		
@@ -800,9 +800,9 @@ Or if you are interested please fill in the form below;
 					<label for="cntctfrm_contact_message">Message: <span class="required">*</span></label>
 				</div><div class="cntctfrm_input cntctfrm_input_message">
 					<textarea rows="5" cols="30" name="cntctfrm_contact_message" id="cntctfrm_contact_message"></textarea>
-				</div><div class="cntctfrm_input cntctfrm_input_captcha"><p class="cptch_block" style="text-align:left;"><label>To help stop spam<span class="required"> *</span></label><br><input type="hidden" name="cptch_result" value="F6M=">
-			<input type="hidden" name="cptch_time" value="1479822412">
-			<input type="hidden" value="Version: 4.1.1"><input class="cptch_input" type="text" autocomplete="off" name="cptch_number" value="" maxlength="1" size="1" style="margin-bottom:0;display:inline;font-size: 12px;width: 40px;"> − six = 0</p></div><div class="cntctfrm_input cntctfrm_input_submit"><input type="hidden" value="send" name="cntctfrm_contact_action"><input type="hidden" value="Version: 3.30">
+				</div><div class="cntctfrm_input cntctfrm_input_captcha"><p class="cptch_block" style="text-align:left;"><label>To help stop spam<span class="required"> *</span></label><br><input type="hidden" name="cptch_result" value="ehU=">
+			<input type="hidden" name="cptch_time" value="1496711881">
+			<input type="hidden" value="Version: 4.1.1">5 + <input class="cptch_input" type="text" autocomplete="off" name="cptch_number" value="" maxlength="1" size="1" style="margin-bottom:0;display:inline;font-size: 12px;width: 40px;"> =  eight</p></div><div class="cntctfrm_input cntctfrm_input_submit"><input type="hidden" value="send" name="cntctfrm_contact_action"><input type="hidden" value="Version: 3.30">
 					<input type="hidden" value="en" name="cntctfrm_language">
 					<input type="hidden" value="1" name="cntctfrm_form_submited">
 					<input type="submit" value="Submit" class="cntctfrm_contact_submit">
@@ -1003,7 +1003,7 @@ $(document).ready(function(){
 <!-- Performance optimized by W3 Total Cache. Learn more: http://www.w3-edge.com/wordpress-plugins/
 
 Page Caching using apc
-Database Caching 49/60 queries in 0.053 seconds using apc
-Object Caching 3341/3364 objects using apc
+Database Caching 49/60 queries in 0.018 seconds using apc
+Object Caching 3342/3365 objects using apc
 
- Served from: www.learning4kids.net @ 2016-11-22 21:46:53 by W3 Total Cache --></body></html>
+ Served from: www.learning4kids.net @ 2017-06-06 09:18:02 by W3 Total Cache --></body></html>
