breedersclub.net (archived on 2017-06-06)
{
  "alexa_rank": 988805,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 4801,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.55,
  "homepage_snapshot_redirected_domain": "breedersclub.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170303031256id_/http://www.breedersclub.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170303031256id_/http%3A//breedersclub.net",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "breedersclub.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606012701id_/http%3A//breedersclub.net/classifieds/modules.php%3Fmod%3DExtra_Pages%26pg%3Dprivacy",
  "policy_title": "Privacy Policy",
  "policy_url": "breedersclub.net/classifieds/modules.php?mod=Extra_Pages&pg=privacy",
  "sha1": "eff71f298a70698de05f7bcbdbc168139db29c1d",
  "simhash": 4328392160420354146,
  "simhash_updated": false,
  "site_hostname": "breedersclub.net",
  "site_url": "http://breedersclub.net",
  "smog": 11.98,
  "strict_updated": false,
  "timestamp": "20170606012701",
  "word_count": 830,
  "year": 2017
}

--- a/b/br/bre/breedersclub.net.html
+++ b/b/br/bre/breedersclub.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the breedersclub.net privacy policy that was archived on 2016-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161204003739id_/http%3A//breedersclub.net/classifieds/modules.php%3Fmod%3DExtra_Pages%26pg%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the breedersclub.net privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606012701id_/http%3A//breedersclub.net/classifieds/modules.php%3Fmod%3DExtra_Pages%26pg%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
@@ -164,6 +164,7 @@ tinymce.init({
 <li><a href="dogs-and-puppies-for-sale-b428_0.html">Dogs and Puppies for sale</a></li>
 <li><a href="cats-and-kittens-for-sale-b327_0.html">Cats and Kittens for sale</a></li>
 <li><a href="dog-stud-services-b22_0.html">Dog Stud Services</a></li>
+<li><a href="more-classified-ads-b538_0.html">More Classified Ads</a></li>
 
 
 
@@ -191,7 +192,7 @@ Learn More.</a>
   <div class="sitem">
 
 Welcome, <span class="atn">guest</span> ! <br>
-We have 284 guest(s) online
+We have 311 guest(s) online
 
   </div>
 
