afterhoursprogramming.com (archived on 2017-06-06)
{
  "alexa_rank": 167032,
  "analysis_subcorpus": true,
  "categories": "education;informationtech",
  "char_count": 5298,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.57,
  "homepage_snapshot_redirected_domain": "afterhoursprogramming.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170426082748id_/http://www.afterhoursprogramming.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170426082748id_/http%3A//afterhoursprogramming.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "afterhoursprogramming.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606012827id_/http%3A//www.afterhoursprogramming.com/information/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "afterhoursprogramming.com/information/privacy-policy",
  "sha1": "faf36e05b6110d10a44757b27c1c6844ce22d079",
  "simhash": 25625454655508985,
  "simhash_updated": true,
  "site_hostname": "afterhoursprogramming.com",
  "site_url": "http://afterhoursprogramming.com",
  "smog": 14.12,
  "strict_updated": true,
  "timestamp": "20170606012827",
  "word_count": 843,
  "year": 2017
}

--- a/a/af/aft/afterhoursprogramming.com.html
+++ b/a/af/aft/afterhoursprogramming.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the afterhoursprogramming.com privacy policy that was archived on 2016-09-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160905221458id_/http%3A//www.afterhoursprogramming.com/information/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the afterhoursprogramming.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606012827id_/http%3A//www.afterhoursprogramming.com/information/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head lang="en">
     <meta charset="UTF-8">
@@ -207,6 +207,9 @@
             </ul>
         </div>
     </div>
+
+<a href="https://m.do.co/c/506f836df40a"><img src="/static/images/branding/DigitalOcean.gif" width="250"></a>
+
 </nav>
             </div>
         </div>
@@ -286,6 +289,12 @@
 
     <p>Occasionally, at our discretion, we may include or offer third party products or services on our website. These third party sites have separate and independent privacy policies. We therefore have no responsibility or liability for the content and activities of these linked sites. Nonetheless, we seek to protect the integrity of our site and welcome any feedback about these sites.</p>
 
+<h2>Affiliate Disclaimer – AfterHoursProgramming.com</h2>
+
+<p><strong>Affiliate Disclaimer: </strong>Some links on this page redirect you to Amazon. Amazon is one of the biggest reliable online shops. AfterHoursProgramming.com is a participant in the Amazon Services LLC Associates Program, an affiliate advertising program designed to provide a means for sites to earn advertising fees by advertising and linking to amazon.com. We or our advertising partners may use cookies to monitor clicks or for informational basis only.</p>
+
+<p>Prices may have changed and we have no control over it. We may earn money from referring you to Amazon. Clicking any of the links on this website does not increase the cost or affect the price for any product you purchase from Amazon. Our main purpose is for informational purpose and not for earning.</p>
+
     <h2>California Online Privacy Protection Act Compliance</h2>
 
     <p>Because we value your privacy we have taken the necessary precautions to be in compliance with the California Online Privacy Protection Act. We therefore will not distribute your personal information to outside parties without your consent.</p>
@@ -347,7 +356,7 @@
             <img alt="Delicious" height="60" width="60" style="margin-bottom:0px;display:inline;" class="thumbnail" src="/static/images/social-media/delicious.jpg">
         </a>
     </div>
-    <div id="socialShareCsrf"><input type="hidden" name="csrfmiddlewaretoken" value="s0VSWYqkgS7Fzafc54MyUzdL71OtEPoz"></div>
+    <div id="socialShareCsrf"><input type="hidden" name="csrfmiddlewaretoken" value="A3UEzuLE8DTfTcUKGLaqX1aCXAVWOqB5"></div>
     <script>
         $("a.social-share-click").click(function(){
             $.post("/social/share/", {csrfmiddlewaretoken: $('#socialShareCsrf [name="csrfmiddlewaretoken"]').val()});
@@ -998,12 +1007,12 @@ console.log("hi");
                 <p><a rel="nofollow" href="http://www.afterhoursprogramming.com/information/terms-of-use/">Terms of Use</a></p>
             </div>
             <p>
-                <span>Copyright © 2016</span>
+                <span>Copyright © 2017</span>
                 <span><a rel="nofollow" href="">After Hours Programming</a></span>
             </p>
         </div>
     </div>
-    <div id="trackNavigationCsrf"><input type="hidden" name="csrfmiddlewaretoken" value="s0VSWYqkgS7Fzafc54MyUzdL71OtEPoz"></div>
+    <div id="trackNavigationCsrf"><input type="hidden" name="csrfmiddlewaretoken" value="A3UEzuLE8DTfTcUKGLaqX1aCXAVWOqB5"></div>
     <div class="modal fade" id="badgeModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
